# solana-block-engine

./: .gitignore  Cargo.toml  OVERVIEW.md  README.md
.claude/: settings.local.json
scripts/: e2e_test.sh
src/auction/: Cargo.toml
src/auction/src/: lib.rs
src/auction/tests/: auction.rs
src/auth/: Cargo.toml
src/auth/src/: interceptor.rs  lib.rs  server.rs  token.rs
src/auth/tests/: handshake.rs
src/block_engine/: Cargo.toml
src/block_engine/src/: main.rs
src/interest/: Cargo.toml
src/interest/src/: lib.rs
src/interest/tests/: interest.rs
src/jito_protos/: Cargo.toml
src/jito_protos/protos/: VENDOR.md
src/jito_protos/src/: lib.rs
src/jito_upstream/: Cargo.toml
src/jito_upstream/src/: auth.rs  consumer.rs  lib.rs  tls.rs
src/jito_upstream/tests/: auth.rs  consumer.rs
src/leader_tracker/: Cargo.toml
src/leader_tracker/src/: lib.rs
src/metrics/: Cargo.toml
src/metrics/src/: lib.rs
src/relayer/: Cargo.toml
src/relayer/src/: server.rs
src/results/: Cargo.toml
src/results/src/: lib.rs
src/results/tests/: results.rs
src/searcher/: Cargo.toml
src/searcher/src/: server.rs
src/searcher_client/: Cargo.toml
src/searcher_client/src/: main.rs
src/simulator/: Cargo.toml
src/simulator/src/: lib.rs
src/tracker/: Cargo.toml
src/tracker/src/: lib.rs
src/validator/: Cargo.toml
src/validator/src/: server.rs
