[workspace]
resolver = "2"
members = [
    "src/jito_protos",
    "src/metrics",
    "src/auth",
    "src/auction",
    "src/simulator",
    "src/interest",
    "src/results",
    "src/tracker",
    "src/leader_tracker",
    "src/validator",
    "src/relayer",
    "src/searcher",
    "src/jito_upstream",
    "src/block_engine",
    "src/searcher_client",
]
default-members = [
    "src/jito_protos",
    "src/metrics",
    "src/auth",
    "src/auction",
    "src/simulator",
    "src/interest",
    "src/results",
    "src/tracker",
    "src/leader_tracker",
    "src/validator",
    "src/relayer",
    "src/searcher",
    "src/jito_upstream",
    "src/block_engine",
]

[workspace.dependencies]
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tonic-build = "0.12"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive", "env"] }
uuid = { version = "1", features = ["v4"] }
