[package]
name = "jito-auction"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "jito_auction"
path = "src/lib.rs"

[dependencies]
jito-protos = { path = "../jito_protos" }
jito-metrics = { path = "../metrics" }
jito-results = { path = "../results" }
bincode = "1.3"
log = { workspace = true }
solana-sdk = "3"
solana-system-interface = { version = "3", features = ["bincode"] }

[dev-dependencies]
solana-system-transaction = "3"
