[package]
name = "jito-auth"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
jito-protos = { path = "../jito_protos" }
jito-metrics = { path = "../metrics" }
bs58 = "0.5"
ed25519-dalek = "2"
jsonwebtoken = "9"
log = { workspace = true }
prost-types = { workspace = true }
serde = { version = "1", features = ["derive"] }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
uuid = { workspace = true }
