[package]
name = "jito-block-engine"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
jito-auction = { path = "../auction" }
jito-auth = { path = "../auth" }
jito-leader-tracker = { path = "../leader_tracker" }
jito-simulator = { path = "../simulator" }
jito-protos = { path = "../jito_protos" }
jito-relayer-service = { path = "../relayer" }
jito-searcher = { path = "../searcher" }
jito-validator = { path = "../validator" }
clap = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
