[package]
name = "jito-interest"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "jito_interest"
path = "src/lib.rs"

[dependencies]
jito-protos = { path = "../jito_protos" }
bincode = "1.3"
log = { workspace = true }
solana-sdk = "3"

[dev-dependencies]
solana-system-transaction = "3"
