[package]
name = "jito-relayer-service"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "jito_relayer_service"
path = "src/lib.rs"

[dependencies]
jito-protos = { path = "../jito_protos" }
jito-interest = { path = "../interest" }
jito-metrics = { path = "../metrics" }
tonic = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
log = { workspace = true }
