[package]
name = "jito-searcher-client"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
jito-protos = { path = "../jito_protos" }
bincode = "1.3"
clap = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
solana-sdk = "3"
solana-commitment-config = "3"
solana-client = "3"
solana-system-transaction = "3"
tokio = { workspace = true }
tonic = { workspace = true }
