[package]
name = "jito-simulator"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "jito_simulator"
path = "src/lib.rs"

[dependencies]
jito-protos = { path = "../jito_protos" }
jito-auction = { path = "../auction" }
bincode = "1.3"
log = { workspace = true }
solana-client = "2"
solana-sdk = "2"
