[package]
name = "jito-simulator"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "jito_simulator"
path = "src/lib.rs"

[dependencies]
jito-protos = { path = "../jito_protos" }
jito-auction = { path = "../auction" }
base64 = "0.22"
bincode = "1.3"
log = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
solana-client = "3"
solana-sdk = "3"
solana-commitment-config = "3"
