[package]
name = "jito-tracker"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "jito_tracker"
path = "src/lib.rs"

[dependencies]
jito-protos = { path = "../jito_protos" }
jito-results = { path = "../results" }
bincode = "1.3"
log = { workspace = true }
tokio = { workspace = true }
solana-client = "3"
solana-sdk = "3"
solana-commitment-config = "3"
solana-transaction-status-client-types = "3"
