[package]
name = "jito-validator"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
jito-protos = { path = "../jito_protos" }
jito-auth = { path = "../auth" }
jito-leader-tracker = { path = "../leader_tracker" }
log = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
uuid = { workspace = true }
